Nouveau DESIGN Gestion du nouveau MENU

--- a/src/assets/scss/engine/layout/_page.scss
+++ b/src/assets/scss/engine/layout/_page.scss
@@ -1,7 +1,5 @@
 * {
 	box-sizing: border-box;
-	font-weight: normal;
-	line-height: 1.5em;
 }
 
 html {
@@ -12,21 +10,8 @@ body {
 	background-color: #f7f7f7;
 	height: 100%;
 	font-size: 10px;
-	font-family: 'Press Start 2P', cursive;
+	font-family: 'Segoe UI', cursive;
 	color: #333;
 	margin: 0;
 	position: relative;
-}
-
-.--text-border {
-	text-shadow:
-		4px 4px 0 White,
-		4px 0px 0 White,
-		4px -4px 0 White,
-		0px 4px 0 White,
-		0px 0px 0 White,
-		0px -4px 0 White,
-		-4px 4px 0 White,
-		-4px 0px 0 White,
-		-4px -4px 0 White;
 }
