--- a/src/assets/scss/game/base/_typography.scss
+++ b/src/assets/scss/game/base/_typography.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Megrim&family=Noto+Sans+JP:wght@100&family=Raleway:wght@300&family=Trade+Winds&display=swap');
