--- a/src/assets/scss/game/layout/_menu.scss
+++ b/src/assets/scss/game/layout/_menu.scss
@@ -1,22 +1,8 @@
 /* Menu */
-#CTX__Menu {
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-	justify-content: center;
-	padding: 20px;
+#CTX__Menu {}
 
-    h1 {
-        font-size: 7em;
-
-        span {
-            display: block;
-            font-size: 10px;
-            color: DarkGray;
-        }
-    }
-
+#LAY__Menu {
     ul {
-        width: 200px;
+        width: $width-medium / 2;
     }
 }
