Nouvelle strucutre des CLASS BATTLEELEMENT

--- a/src/assets/scss/game/abstracts/_variables.scss
+++ b/src/assets/scss/game/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 $font-family: 'Raleway', sans-serif;
 $font-color: #333;
+$font-size-tiny: 10px;
 $font-size-small: 18px;
 $font-size: 20px;
 $font-size-medium: 32px;
