--- a/src/assets/scss/game/layout/_battle.scss
+++ b/src/assets/scss/game/layout/_battle.scss
@@ -411,7 +411,8 @@
     }
 }
 
-.Battle__Character {
+.Battle__Character,
+.Battle__Player {
     width: 200px;
     height: 200px;
     transform-origin: 98px 182px;
