--- a/src/assets/scss/game/components/_alert.scss
+++ b/src/assets/scss/game/components/_alert.scss
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.25);
+    z-index: 10000;
 
     &.--show {
         display: flex;
@@ -36,6 +37,7 @@
             text-align: left;
             padding: 25px; 
             margin: 0;
+            font-size: $font-size-tiny;
         }
 
         .Alert__Close {
