--- a/src/assets/scss/game/layout/_training.scss
+++ b/src/assets/scss/game/layout/_training.scss
@@ -191,7 +191,7 @@
     }
 }
 
-.Battle__Character {
+.Battle__Player {
     .Training__PositionBox > * {
         border-color: Deepskyblue;
         background-color: rgba(Deepskyblue, 0.25);
