--- a/src/doc/_doc.css
+++ b/src/doc/_doc.css
@@ -66,7 +66,8 @@ a[href="References.md"] {
     width: auto;
     z-index: 100;
     height: auto;
-    bottom: auto;
+    bottom: 16px;
+    overflow: auto;
 }
 
 #_toc ._ul a {
