Gestion SPLIT TEXT dans module DISPLAY TAIOKEN en BEAM CANCEL via RECOVERY en pas STATUS FADE dans les menus

--- a/src/assets/scss/game/layout/_menu.scss
+++ b/src/assets/scss/game/layout/_menu.scss
@@ -1,6 +1,8 @@
 /* Menu */
 #CTX__Menu {
 
+    animation: none;
+
     .DS-Information {
         animation: 2s ease-in 0s 1 DS-KF-Appear;
         height: $height-medium;
