Gestion du RESET dans MENU TRAINING

--- a/src/assets/scss/game/layout/_training.scss
+++ b/src/assets/scss/game/layout/_training.scss
@@ -47,6 +47,11 @@
             color: DarkGray;
             min-width: 15px;
             margin-left: 25px;
+
+            &.--change {
+                font-weight: bold;
+                color: #333;
+            }
         }
     }
 }
